# arxiv-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  NEW_DAILY_WORKFLOW_FEATURES.md  NEXT_STEPS_FOR_TESTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  download_granger_papers.py  download_granger_simple.py  download_granger_sync.py  download_granger_targeted_papers.py  pyproject.toml  pytest.ini  run_complete_test_suite.py  run_tests_and_report.py  run_tests_with_report.py  test_all_tools.py  test_mcp_basic.py  validate_real_functionality.py
docs/: DOCKER_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  SEARCH_TIPS.md  SEARCH_WIDENING_STRATEGY.md  STORAGE_GUIDE.md  TEST_REPORTING_GUIDE.md  USAGE_GUIDE.md
docs/architecture/: ARCHITECTURE_REFACTORING_PLAN.md  REFACTORING_PROGRESS.md
docs/correspondence/: docker_deployment_alt.md
docs/reports/: CLAUDE_COMPLIANCE_STATUS.md  arxivbot_test_report_20250525_183446.md  search_widening_test_report_20250528.md  test_cleanup_report.md  test_report_20250525_181328.md  test_report_20250525_181348.md  test_report_20250525_181625.md  test_report_20250525_181750.md  test_validation_report.md
docs/reports/claude_desktop_test_reports/: arxiv-mcp-server_Test_Report_for_Debugging.md
docs/tasks/: 001_arxiv_mcp_features.md  002_3layer_architecture_refactor.md  002_test_search_papers.md  003_test_download_paper.md  004_test_batch_download.md  COMPREHENSIVE_ARXIV_TASKS.md  README.md  TEST_RUNNER.md
docs/test-examples/: 005_test_extract_citations.md  006_test_compare_paper_ideas.md  007_test_find_similar_papers.md  008_test_extract_sections.md  009_test_paper_notes.md  010_test_summarize_paper.md  011_test_integration_workflow.md
scripts/: docker-mcp-wrapper.sh  migrate_papers.py
src/arxiv_mcp_server/: cli.py  config_improved.py  converters.py  converters_enhanced.py  llm_providers.py  server.py  test_reporter.py
src/arxiv_mcp_server/cli/: __main__.py  search_commands.py
src/arxiv_mcp_server/core/: __init__.py  citations.py  download.py  search.py  utils.py
tests/: CLAUDE_COMPLIANT_TEST_STRATEGY.md  README.md  README_TEST_ORGANIZATION.md  TEST_COMPLIANCE_SUMMARY.md  URGENT_CLAUDE_VIOLATIONS.md  conftest.py  test_cli.py  test_example_compliant.py  test_real_functionality.py  test_search_widening.py
tests/tools/: test_comparative_analysis.py  test_paper_similarity.py  test_research_support.py
(+32 files in other folders)
