# IMPORTANT: When running 'uv sync' with an activated virtual environment,
# always use 'uv sync --active' to avoid path warnings
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-mcp-server"
version = "0.1.0"
description = "ArXivBot - Automate your literature review with evidence mining for ArXiv papers (fork of arxiv-mcp-server)"
readme = "README.md"
requires-python = ">=3.10.11"
license = { text = "MIT" }
authors = [
    { name = "Graham Anderson", email = "graham@grahama.co" }
]
keywords = ["arxiv", "research", "automation", "mcp", "literature-review", "evidence-mining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "arxiv>=2.1.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.8.0",
    "mcp>=1.2.0",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.23.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    "uvicorn>=0.30.0",
    "sse-starlette>=1.8.2",
    "anyio>=4.2.0",
    "loguru>=0.7.3",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.0.3",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "aioresponses>=0.7.6"
]
dev = [
    "black>=23.3.0"
]
camelot = [
    "camelot-py[cv]>=0.11.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_fixture_loop_scope = "function"  # Added this line
testpaths = ["tests"]
addopts = "-v --cov=arxiv_mcp_server"

[project.scripts]
arxiv-mcp-server = "arxiv_mcp_server:main"
arxiv-cli = "arxiv_mcp_server.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
